--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>dead pixel detector</title>
 </head>
 <body>
+    <h1>Tap me</h1>
+    <style>
+        h1 {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 6vw;
+            margin: 0;
+            opacity: calc(40%);
 
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+        }
+    </style>
 </body>
 </html>
